--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-spinners": "^0.17.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.17",
+    "uuid": "^13.0.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
